--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,12 +12,12 @@
   <a href="#">Adverts</a>
 {{else}}
 
-  <dialog class="modal" id="signup">
+  <dialog class="modal rounded" id="signup">
     <div id="form" class="p-4">
-      <h2 class="text-2xl mb-4">Sign Up</h2>
+      <h2 class="text-2xl mb-4 text-color">Sign Up</h2>
       <form action="/signup" method="POST" class="flex flex-col space-y-4">
 
-        <label class="flex flex-col">
+        <label class="flex flex-col text-color">
           <span class="text-sm mb-1">Username:</span>
           <input
             type="text"
@@ -27,7 +27,7 @@
           />
         </label>
 
-        <label class="flex flex-col">
+        <label class="flex flex-col text-color">
           <span class="text-sm mb-1">Email:</span>
           <input
             type="email"
@@ -37,7 +37,7 @@
           />
         </label>
 
-        <label class="flex flex-col">
+        <label class="flex flex-col text-color">
           <span class="text-sm mb-1">Password:</span>
           <input
             type="password"
@@ -47,7 +47,7 @@
           />
         </label>
 
-        <label class="flex flex-col">
+        <label class="flex flex-col text-color">
           <span class="text-sm mb-1">Address:</span>
           <input
             type="text"
@@ -57,7 +57,7 @@
           />
         </label>
 
-        <label class="flex flex-col">
+        <label class="flex flex-col text-color">
           <span class="text-sm mb-1">City:</span>
           <input
             type="text"
@@ -67,7 +67,7 @@
           />
         </label>
 
-        <label class="flex flex-col">
+        <label class="flex flex-col text-color">
           <span class="text-sm mb-1">Postcode:</span>
           <input
             type="text"
@@ -77,7 +77,7 @@
           />
         </label>
 
-        <label class="flex flex-col">
+        <label class="flex flex-col text-color">
           <span class="text-sm mb-1">Country:</span>
           <input
             type="text"
@@ -105,11 +105,11 @@
 
   <dialog class="modal" id="login">
     <div id="login-form" class="p-4">
-      <h2 class="text-2xl mb-4" style="color: #08415c;">Log In</h2>
+      <h2 class="text-2xl mb-4 text-color" >Log In</h2>
       <form action="/login" method="POST" class="flex flex-col space-y-4">
 
         <label class="flex flex-col">
-          <span class="text-sm mb-1" style="color: #08415c;">Username:</span>
+          <span class="text-sm mb-1 text-color" >Username:</span>
           <input
             type="text"
             name="username"
@@ -119,7 +119,7 @@
         </label>
 
         <label class="flex flex-col">
-          <span class="text-sm mb-1" style="color: #08415c;">Email:</span>
+          <span class="text-sm mb-1 text-color" >Email:</span>
           <input
             type="email"
             name="email"
@@ -129,7 +129,7 @@
         </label>
 
         <label class="flex flex-col">
-          <span class="text-sm mb-1" style="color: #08415c;">Password:</span>
+          <span class="text-sm mb-1 text-color" >Password:</span>
           <input
             type="password"
             name="password"
