--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-  font-family: "Roboto";
+  font-family: "Montserrat";
   --bg-header: #056365;
   --bg-header2: #236042;
   --bg-header-dk: #153a28;
