--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
 <nav class="navbar bg-header py-7 px-4 text-white gap-3">
   <img src="/images/logo.png" alt="logo" class="logo" />
-  <div class="">
+  <div class="text-sm md:text-xl">
     <a href="#" class="open-button mr-3" id="signup">sign up</a>
-    <a href="#" class="open-button mr-3" id="login">login</a>
+    <a href="#" class="open-button mr-3 font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-grey-400 hover:bg-yellow-600" id="login">login</a>
 
   </div>
 </nav>
