--- a/views/adverts/adverts.hbs
+++ b/views/adverts/adverts.hbs
@@ -1,19 +1,20 @@
 <div class="card-advert">
   {{#each adverts}}
-    <div class="card-advert-info open-button" id="{{@index}}">
-      <a href="/adverts/{{_id}}">
-        <img
-          src="{{imageUrl}}"
-          alt="{{title}}"
-          class="transition duration-300 ease-in-out hover:opacity-75"
-        />
+    <div class="card-advert-info open-button relative" id="{{@index}}">
+      <a href="/adverts/{{_id}}" onclick="return false;">
+        <div>
+          <img
+            src="{{imageUrl}}"
+            alt="{{title}}"
+            class="transition duration-300 ease-in-out hover:opacity-75 open-button"
+            id="{{@index}}"
+          />
+        </div>
+        <h5 class="absolute top-0 left-0 p-2 text-white">{{title}}</h5>
       </a>
       <div>
-        <h5>{{title}}</h5>
-        <button class="open-button" id="{{@index}}">Details</button>
-        <a href="/adverts/{{_id}}" class="btn btn-success">Update</a>
         <form action="/adverts/{{_id}}/delete" method="POST">
-          <button type="submit">Delete</button>
+
         </form>
       </div>
     </div>
@@ -50,6 +51,8 @@
               >Add to Cart</button>
               <a href="/contact/{{_id}}" class="btn btn-secondary">Contact
                 Seller</a>
+              <button type="submit">Delete</button>
+              <a href="/adverts/{{_id}}" class="btn btn-success">Update</a>
             </form>
           </div>
           <small class="text-gray-700">Posted by
