--- a/views/adverts/adverts.hbs
+++ b/views/adverts/adverts.hbs
@@ -49,11 +49,11 @@
                 type="submit"
                 class="btn btn-primary bg-blue-500 text-white py-2 px-4 rounded uppercase hover:bg-blue-700 font-bold"
               >Add to Cart</button>
+              </form>
               <a href="/contact/{{_id}}" class="btn btn-secondary">Contact
                 Seller</a>
-              <button type="submit">Delete</button>
+              <a href="/adverts/{{_id}}/delete" class="btn btn-secondary">Delete</a>
               <a href="/adverts/{{_id}}" class="btn btn-success">Update</a>
-            </form>
           </div>
           <small class="text-gray-700">Posted by
             <strong>{{creator}}</strong>
