--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,11 +61,29 @@ h1 {
 /* ADVERTS CARD */
 
 .card-advert {
-  /* //border: 1px solid black; */
-  margin: 1em;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 5px;
+}
+
+.card-advert-info {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%; /* Creates a square aspect ratio */
+}
+
+.card-advert-info a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.card-advert-info img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 dialog {
@@ -73,7 +91,6 @@ dialog {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgb(244, 248, 244);
-  padding: 1.5em 2em;
 }
 
 .login-form,
