--- a/views/adverts/adverts.hbs
+++ b/views/adverts/adverts.hbs
@@ -1,6 +1,6 @@
 <div class="card-advert m-20">
   {{#each adverts}}
-    <div class="card-advert-info open-button relative" id="{{@index}}">
+    <div class="card-advert-info open-button relative border-2" id="{{@index}}">
       <a href="/adverts/{{_id}}" onclick="return false;">
         <div class="bg-contain">
           <img
