--- a/views/cart/cart.hbs
+++ b/views/cart/cart.hbs
@@ -1,67 +1,68 @@
-<section class="cart-section text-center p-5 bg-section h-full">
-
-  <div class="flex justify-between mb-4">
-    <h1 class="text-lg font-bold uppercase text-color"><span
-        class="border-b-2 border-current"
-      >{{userInSession.username}}</span>
-      CART</h1>
-
-    <a href="/adverts">Keep buying</a>
-
+<section class="cart-section p-5 bg-section h-full flex flex-col">
+  <div class="mb-8 text-center flex justify-between items-center">
+    <h1 class="text-xl font-bold uppercase text-color mb-6">
+      <span class="border-b-2 border-current">{{userInSession.username}}</span>
+      CART
+    </h1>
+    <a
+      class="text-xs bg-blue-500 text-white p-2 rounded hover:text-white hover:bg-blue-800 self-center"
+      href="/adverts"
+    >Keep buying</a>
   </div>
+
   {{#if userCart}}
-    <table class="cart flex flex-col gap-4 ml-4 mt-4">
-      <th class="flex justify-center">
-        <tr class="flex justify-around">
-          <th class="">Product</th>
-          <th class="">Quantity</th>
-          <th>Price</th>
-          <th>Remove</th>
-        </tr>
-      </th>
-      <tbody class="flex flex-col">
-        {{#each userCart.products}}
-          <tr
-            class="cart-item flex justify-around items-center border-b-2 pb-2 pt-2"
-          >
-            <td class="cart-item-name">{{this.title}}</td>
-            <td class="cart-item-qty">{{this.amount}}</td>
-            <td class="cart-item-price">{{this.cost}}</td>
-            <td>
-              <form action="/cart/{{this._id}}/delete" method="post">
+    <div class="w-full">
+      <table class="w-full">
+        <thead>
+          <tr class="text-center">
+            <th class="px-4 py-2">Product</th>
+            <th class="px-4 py-2">Quantity</th>
+            <th class="px-4 py-2">Price</th>
+            <th class="px-4 py-2">Remove</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each userCart.products}}
+            <tr class="text-center border-b-2 pb-2 pt-2">
+              <td class="px-4 py-2">{{this.title}}</td>
+              <td class="px-4 py-2">{{this.amount}}</td>
+              <td class="px-4 py-2">{{this.cost}}</td>
+              <td class="px-4 py-2">
+                <form action="/cart/{{this._id}}/delete" method="post">
+                  <button
+                    type="submit"
+                    class="font-bold text-red-400 hover:text-red-800"
+                  >x</button>
+                </form>
+              </td>
+            </tr>
+          {{/each}}
+        </tbody>
+        <tfoot>
+          <tr class="text-center">
+            <td colspan="4" class="px-4 py-2">
+              <h2 class="font-bold text-xl text-color mt-5">
+                Total: £<span class="">{{price}}</span>
+              </h2>
+            </td>
+          </tr>
+          <tr class="text-center">
+            <td colspan="4" class="px-4 py-2">
+              <form action="/cart/checkout" method="post">
+                {{#each userCart.products}}
+                  <input type="hidden" name="productId" value="{{_id}}" />
+                {{/each}}
                 <button
                   type="submit"
-                  class="font-bold text-red-400 hover:text-red-800"
-                >x</button>
+                  class="font-bold bg-yellow-400 px-3 py-2 rounded text-white hover:text-grey-400 hover:bg-yellow-600 uppercase"
+                >Checkout</button>
               </form>
             </td>
           </tr>
-        {{/each}}
-      </tbody>
-      <tfoot class="">
-        <tr class="cart-total flex justify-around items-center gap-5 m-3">
-          <td>
-            <h2 class="cart-total-price font-bold text-xl text-color">Total: £
-              <span class="">{{price}}</span>
-            </h2>
-          </td>
-          <td>
-            <form action="/cart/checkout" method="post">
-              {{#each userCart.products}}
-                <input type="hidden" name="productId" value="{{_id}}" />
-              {{/each}}
-              <button
-                type="submit"
-                class="font-bold bg-yellow-400 px-3 py-2 rounded text-white hover:text-grey-400 hover:bg-yellow-600 uppercase"
-              >Checkout</button>
-            </form>
-          </td>
-        </tr>
-      </tfoot>
-
-    </table>
+        </tfoot>
+      </table>
+    </div>
   {{else}}
     <p>Your cart is empty.</p>
   {{/if}}
-
 </section>
