--- a/views/cart/cart.hbs
+++ b/views/cart/cart.hbs
@@ -63,6 +63,6 @@
       </table>
     </div>
   {{else}}
-    <p>Your cart is empty.</p>
+    <p class="text-center">Your cart is empty.</p>
   {{/if}}
 </section>
