--- a/views/adverts/adverts.hbs
+++ b/views/adverts/adverts.hbs
@@ -1,87 +1,93 @@
-<div class="card-advert m-20">
-  {{#each adverts}}
-    <div class="card-advert-info open-button relative border-2" id="{{@index}}">
-      <a href="/adverts/{{_id}}" onclick="return false;">
-        <div class="bg-contain">
+<section class="h-full bg-section">
+
+  <div class="card-advert m-20">
+    {{#each adverts}}
+      <div
+        class="card-advert-info open-button relative border-2"
+        id="{{@index}}"
+      >
+        <a href="/adverts/{{_id}}" onclick="return false;">
+          <div class="bg-contain">
+            <img
+              src="{{imageUrl}}"
+              alt="{{title}}"
+              class="transition duration-300 ease-in-out hover:opacity-75 open-button object-cover"
+              id="{{@index}}"
+            />
+          </div>
+          <h5 class="absolute top-0 left-0 p-2 text-white">{{title}}</h5>
+        </a>
+      </div>
+
+      <dialog class="modal" id="{{@index}}">
+        <div class="modal-background">
+          <button
+            type="button"
+            class="close-button bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white absolute top-0 right-0 m-4"
+          >X</button>
           <img
             src="{{imageUrl}}"
-            alt="{{title}}"
-            class="transition duration-300 ease-in-out hover:opacity-75 open-button object-cover"
-            id="{{@index}}"
+            alt="Advert Image"
+            class="object-cover w-full h-full"
           />
         </div>
-        <h5 class="absolute top-0 left-0 p-2 text-white">{{title}}</h5>
-      </a>
-    </div>
-
-    <dialog class="modal" id="{{@index}}">
-      <div class="modal-background">
-        <button
-          type="button"
-          class="close-button bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white absolute top-0 right-0 m-4"
-        >X</button>
-        <img
-          src="{{imageUrl}}"
-          alt="Advert Image"
-          class="object-cover w-full h-full"
-        />
-      </div>
-      <div class="modal-content bg-gray-200 p-4">
-        <h2 class="text-2xl mb-4">{{title}}</h2>
-        <div class="relative">
-          <p>{{description}}</p>
-          <div class="mt-4">
-            <p><strong>Amount:</strong> {{amount}}</p>
-            <p><strong>Cost:</strong> {{cost}}</p>
-          </div>
-          <div class="mt-4 mb-4">
-            <div class="flex">
-              <form action="/cart" method="post">
-                <input type="hidden" name="productId" value="{{_id}}" />
-                <input type="hidden" name="title" value="{{title}}" />
-                <input type="hidden" name="amount" value="{{amount}}" />
-                <input type="hidden" name="cost" value="{{cost}}" />
-                <button
-                  type="submit"
-                  class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
-                ><img
-                    src="/images/buy.png"
-                    class="h-7"
-                    alt="Cart image"
-                  /></button>
-              </form>
-              <a
-                href="/contact/{{_id}}"
-                class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
-              ><img
-                  src="/images/message.png"
-                  class="h-7"
-                  alt="Message image"
-                /></a>
-              <a
-                href="/adverts/{{_id}}"
-                class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
-              ><img
-                  src="/images/update-arrows.png"
-                  class="h-7"
-                  alt="Update image"
-                /></a>
-              <form action="/adverts/{{_id}}/delete" method="post"><button
-                  type="submit"
-                  class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
-                ><img
-                    src="/images/delete.png"
-                    class="h-7"
-                    alt="Deletion image"
-                  /></button></form>
+        <div class="modal-content bg-gray-200 p-4">
+          <h2 class="text-2xl mb-4">{{title}}</h2>
+          <div class="relative">
+            <p>{{description}}</p>
+            <div class="mt-4">
+              <p><strong>Amount:</strong> {{amount}}</p>
+              <p><strong>Cost:</strong> {{cost}}</p>
             </div>
+            <div class="mt-4 mb-4">
+              <div class="flex">
+                <form action="/cart" method="post">
+                  <input type="hidden" name="productId" value="{{_id}}" />
+                  <input type="hidden" name="title" value="{{title}}" />
+                  <input type="hidden" name="amount" value="{{amount}}" />
+                  <input type="hidden" name="cost" value="{{cost}}" />
+                  <button
+                    type="submit"
+                    class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
+                  ><img
+                      src="/images/buy.png"
+                      class="h-7"
+                      alt="Cart image"
+                    /></button>
+                </form>
+                <a
+                  href="/contact/{{_id}}"
+                  class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
+                ><img
+                    src="/images/message.png"
+                    class="h-7"
+                    alt="Message image"
+                  /></a>
+                <a
+                  href="/adverts/{{_id}}"
+                  class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
+                ><img
+                    src="/images/update-arrows.png"
+                    class="h-7"
+                    alt="Update image"
+                  /></a>
+                <form action="/adverts/{{_id}}/delete" method="post"><button
+                    type="submit"
+                    class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
+                  ><img
+                      src="/images/delete.png"
+                      class="h-7"
+                      alt="Deletion image"
+                    /></button></form>
+              </div>
+            </div>
+            <small class="text-gray-400">Posted by
+              <strong>{{creator}}</strong>
+              on
+              {{createdAt}}</small>
           </div>
-          <small class="text-gray-400">Posted by
-            <strong>{{creator}}</strong>
-            on
-            {{createdAt}}</small>
         </div>
-      </div>
-    </dialog>
-  {{/each}}
-</div>
+      </dialog>
+    {{/each}}
+  </div>
+</section>
