--- a/views/messages/message-detail.hbs
+++ b/views/messages/message-detail.hbs
@@ -1,6 +1,26 @@
-<h1>{{findedMessage.subject}}</h1>
-<p>{{findedMessage.message}}</p>
+<div class="container mx-auto">
+  <div
+    class="place-content-center bg-green-50 mx-auto rounded-lg shadow-lg flex-col justify-center h-1/3 mt-64 mx-8 max-w-lg"
+  >
+    <div class="flex flex-start items-center">
+      <h1 class="font-bold text-xl ml-4">Subject:</h1>
+      <h1 class="text-lg ml-4 my-4">{{findedMessage.subject}}</h1>
+    </div>
+    <div>
+      <h1 class="font-bold text-xl ml-4">Message:</h1>
+      <div class="bg-white h-32 w-128">
+      <p
+        class="flex justify-start mx-4 my-4"
+      >{{findedMessage.message}}</p>
+      </div>
+    </div>
+  </div>
+  <div class="flex space-x-12 mt-8 justify-center">
+    <a href="/messages">Go Back</a>
 
-<a href="/messages">Go Back</a>
-
-<a href="/{{findedMessage._id}}/reply">Answer</a>
+    <a
+      href="/{{findedMessage._id}}/reply"
+      class="font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
+    >Answer</a>
+  </div>
+</div>
