--- a/views/messages/message-reply.hbs
+++ b/views/messages/message-reply.hbs
@@ -1,24 +1,36 @@
-<h1>Reply</h1>
+<div class="container mx-auto max-w-32">
+  <div
+    class="place-content-center bg-green-50 mx-auto rounded-lg shadow-lg flex-col justify-center h-1/3 mt-64 mx-8 max-w-lg"
+  >
 
-<form action="/{{findedMessage._id}}/reply" method="POST">
-  <label for="recipient">Recipient:</label>
-  <input
-    type="text"
-    name="recipient"
-    id="recipient"
-    value="{{findedMessage.sender.username}}"
-  />
+    <form
+      action="/{{findedMessage._id}}/reply"
+      method="POST"
+      class="flex flex-col"
+    >
+      <label for="recipient" class="font-bold">Recipient:</label>
+      <input
+        type="text"
+        name="recipient"
+        id="recipient"
+        value="{{findedMessage.sender.username}}"
+      />
 
-  <label for="subject">Subject:</label>
-  <input
-    type="text"
-    name="subject"
-    id="subject"
-    value="{{findedMessage.subject}}"
-  />
+      <label for="subject" class="font-bold">Subject:</label>
+      <input
+        type="text"
+        name="subject"
+        id="subject"
+        value="{{findedMessage.subject}}"
+      />
 
-  <label for="message">Message:</label>
-  <textarea name="message" id="message" rows="5"></textarea>
+      <label for="message" class="font-bold">Message:</label>
+      <textarea name="message" id="message" rows="5"></textarea>
 
-  <button type="submit">Send Message</button>
-</form>
+      <button
+        type="submit"
+        class="font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
+      >Send Message</button>
+    </form>
+  </div>
+</div>
