--- a/views/messages/send-messages.hbs
+++ b/views/messages/send-messages.hbs
@@ -1,12 +1,16 @@
-<form action="/sendMessage" method="POST">
-  <label for="recipient">Recipient:</label>
+<div class="container mx-auto max-w-32">
+  <div
+    class="place-content-center bg-green-50 mx-auto rounded-lg shadow-lg flex-col justify-center h-1/3 mt-64 mx-8 max-w-lg"
+  >
+<form action="/sendMessage" method="POST" class="flex flex-col">
+  <label for="recipient" class="font-bold">Recipient:</label>
   <input type="text" name="recipient" id="recipient" />
 
-  <label for="subject">Subject:</label>
+  <label for="subject" class="font-bold">Subject:</label>
   <input type="text" name="subject" id="subject" />
 
-  <label for="message">Message:</label>
+  <label for="message" class="font-bold">Message:</label>
   <textarea name="message" id="message" rows="5"></textarea>
 
-  <button type="submit">Send Message</button>
+  <button type="submit" class="font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600">Send Message</button>
 </form>
