--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,3 +127,10 @@ dialog {
   position: relative;
   right: 1em;
 }
+
+/* footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+} */
