--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer class="bg-header-dk py-5 text-center text-white">
+<footer class="bg-header-dk py-5 text-center text-white flex justify-center">
   <div>
     <small>&copy; SecondServing -
       {{currentYear}}
