--- a/views/messages/messages.hbs
+++ b/views/messages/messages.hbs
@@ -1,35 +1,34 @@
-<div class="container mx-auto">
-  <div
-    class="flex justify-center bg-green-50 rounded-lg shadow-lg h-72 ml-8 mr-8 mt-64 pb-8 max-w-xl"
-  >
+<section class="bg-header h-full">
+
+  <div class="flex justify-center bg-section p-3">
 
     {{#if messages}}
       <table>
 
         <th>
           <tr>
-            <th class="text-xl font-bold">
+            <th class="text-xl font-bold text-color">
               User
             </th>
-            <th class="text-xl font-bold">
+            <th class="text-xl font-bold text-color">
               Subject
             </th>
-            <th class="text-xl font-bold">
+            <th class="text-xl font-bold text-color">
               Message
             </th>
           </tr>
         </th>
         <tbody>
           {{#each messages}}
-            <tr>
-              <td class="border border-slate-700">
+            <tr class="border-b-2">
+              <td class="">
                 {{this.sender.username}}
               </td>
-              <td class="border border-slate-700 ...">
+              <td class="">
                 <a href="/{{this._id}}" class="mx-16">{{this.subject}}</a>
 
               </td>
-              <td class="border border-slate-700 ...">
+              <td class="">
                 <p>
                   {{this.message}}
                 </p>
@@ -37,10 +36,10 @@
               <td>
                 <form action="/{{this._id}}/delete" method="post">
                   <button
-                    class="text-red-700 hover:bg-red-500 hover:text-white"
+                    class="font-bold text-red-400 hover:text-red-800 pl-4"
                     type="s
             "
-                  >Delete</button>
+                  >x</button>
                 </form>
               </td>
             </tr>
@@ -52,12 +51,16 @@
       <p>No Messages</p>
     {{/if}}
   </div>
-</div>
-<div class="flex space-x-12 mt-8 justify-center">
-  <a href="/userProfile">Go Back</a>
-  <a
-    href="/sendMessage"
-    class="font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
-  >Write a message</a>
 
-</div>
+  <div class="flex space-x-12 mt-8 justify-center">
+    <a
+      class="text-xs bg-blue-500 text-white p-2 rounded hover:text-white hover:bg-blue-800 self-center"
+      href="/userProfile"
+    >Go Back</a>
+    <a
+      href="/sendMessage"
+      class="font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
+    >Write a message</a>
+
+  </div>
+</section>
