--- a/views/messages/messages.hbs
+++ b/views/messages/messages.hbs
@@ -1,6 +1,6 @@
 <section class="bg-header h-full">
 
-  <div class="flex justify-center bg-section p-3">
+  <div class="flex justify-center items-center bg-section p-3">
 
     {{#if messages}}
       <table>
