--- a/views/messages/messages.hbs
+++ b/views/messages/messages.hbs
@@ -13,7 +13,7 @@
             <th class="text-xl font-bold text-color">
               Subject
             </th>
-            <th class="text-xl font-bold text-color">
+            <th class="hidden-message text-xl font-bold text-color">
               Message
             </th>
           </tr>
@@ -28,7 +28,7 @@
                 <a href="/{{this._id}}" class="mx-16">{{this.subject}}</a>
 
               </td>
-              <td class="">
+              <td class="hidden-message">
                 <p>
                   {{this.message}}
                 </p>
