Fixed mesage modal

--- a/views/adverts/adverts.hbs
+++ b/views/adverts/adverts.hbs
@@ -57,10 +57,13 @@
                 </form>
                 <a
                   href="/contact/{{_id}}"
-                  class="mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
+                  onclick="return false"
+                  id="messageModal"
+                  class="open-button mr-5 bg-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-600 hover:text-white"
                 ><img
                     src="/images/message.png"
-                    class="h-7"
+                    id="messageModal"
+                    class="open-button h-7"
                     alt="Message image"
                   /></a>
                 <a
