--- a/views/messages/messages.hbs
+++ b/views/messages/messages.hbs
@@ -57,9 +57,12 @@
       class="text-xs bg-blue-500 text-white p-2 rounded hover:text-white hover:bg-blue-800 self-center"
       href="/userProfile"
     >Go Back</a>
+
     <a
-      href="/sendMessage"
-      class="font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
+      href="#"
+      id="messageModal"
+      onclick="return false"
+      class="open-button font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
     >Write a message</a>
 
   </div>
