--- a/views/messages/message-detail.hbs
+++ b/views/messages/message-detail.hbs
@@ -17,10 +17,11 @@
   </div>
   <div class="flex space-x-12 mt-8 justify-center">
     <a href="/messages">Go Back</a>
-
     <a
       href="/{{findedMessage._id}}/reply"
-      class="font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
+      id="messageModal"
+      onclick="return false"
+      class="open-button font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
     >Answer</a>
   </div>
 </div>
