--- a/views/messages/message-detail.hbs
+++ b/views/messages/message-detail.hbs
@@ -1,26 +1,31 @@
-<div class="container mx-auto">
+<section class="h-full bg-section flex flex-col items-center justify-center">
+
   <div
-    class="place-content-center bg-green-50 mx-auto rounded-lg shadow-lg flex-col justify-center h-1/3 mt-64 mx-8 max-w-lg"
+    class="bg-header rounded-lg shadow-lg justify-center w-full m-2 sm:w-4/5 md:max-w-xl p-8"
   >
     <div class="flex flex-start items-center">
-      <h1 class="font-bold text-xl ml-4">Subject:</h1>
-      <h1 class="text-lg ml-4 my-4">{{findedMessage.subject}}</h1>
+      <h1 class="font-bold text-xl ml-4 text-white">Subject:</h1>
+      <h1
+        class="text-lg ml-4 my-4 text-white uppercase font-bold"
+      >{{findedMessage.subject}}</h1>
     </div>
     <div>
-      <h1 class="font-bold text-xl ml-4">Message:</h1>
-      <div class="bg-white h-32 w-128">
-      <p
-        class="flex justify-start mx-4 my-4"
-      >{{findedMessage.message}}</p>
+      <h1 class="font-bold text-xl ml-4 text-white">Message:</h1>
+      <div class="bg-white h-32 w-128 rounded">
+        <p class="flex justify-start m-4">{{findedMessage.message}}</p>
       </div>
     </div>
   </div>
   <div class="flex space-x-12 mt-8 justify-center">
-    <a href="/messages">Go Back</a>
+    <a
+      class="text-xs bg-blue-500 text-white p-2 rounded hover:text-white hover:bg-blue-800 self-center"
+      href="/messages"
+    >Go Back</a>
 
     <a
       href="/{{findedMessage._id}}/reply"
       class="font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-white hover:bg-yellow-600"
     >Answer</a>
   </div>
-</div>
+
+</section>
