--- a/views/index.hbs
+++ b/views/index.hbs
@@ -193,11 +193,11 @@
       <img class="card-img mb-2" src="/images/card1.jpg" alt="" />
       <div class="card-body my-3">
         <h2 class="card-title uppercase font-bold font text-2xl my-3">title</h2>
-        <p class="card-text mb-4 font-bold">Lorem ipsum dolor sit, amet
+        <p class="card-text mb-5 font-bold">Lorem ipsum dolor sit, amet
           consectetur adipisicing elit. Et sed eveniet quisquam amet iusto
           voluptatem laboriosam dignissimos iure?</p>
         <a
-          class="card-link text-color bg-section px-2 py-1 hover:bg-gray-500 hover:text-white"
+          class="card-link text-color bg-section px-3 py-2 hover:bg-gray-500 hover:text-white rounded"
           href="#"
         >Read More</a>
       </div>
@@ -208,11 +208,11 @@
       <img class="card-img mb-2" src="/images/card2.jpg" alt="" />
        <div class="card-body my-3">
      <h2 class="card-title uppercase font-bold font text-2xl my-3">title</h2>
-        <p class="card-text mb-4 font-bold">Lorem ipsum dolor sit, amet
+        <p class="card-text mb-5 font-bold">Lorem ipsum dolor sit, amet
           consectetur adipisicing elit. Et sed eveniet quisquam amet iusto
           voluptatem laboriosam dignissimos iure?</p>
         <a
-          class="card-link text-color bg-section px-2 py-1 hover:bg-gray-500 hover:text-white"
+          class="card-link text-color bg-section px-3 py-2 hover:bg-gray-500 hover:text-white rounded"
           href="#"
         >Read More</a>
         </div>
@@ -223,11 +223,11 @@
       <img class="card-img mb-2" src="/images/card3.jpg" alt="" />
       <div class="card-body my-3">
         <h2 class="card-title uppercase font-bold font text-2xl my-3">title</h2>
-        <p class="card-text mb-4 font-bold">Lorem ipsum dolor sit, amet
+        <p class="card-text mb-5 font-bold">Lorem ipsum dolor sit, amet
           consectetur adipisicing elit. Et sed eveniet quisquam amet iusto
           voluptatem laboriosam dignissimos iure?</p>
         <a
-          class="card-link text-color bg-section px-2 py-1 hover:bg-gray-500 hover:text-white"
+          class="card-link text-color bg-section  px-3 py-2 hover:bg-gray-500 hover:text-white rounded"
           href="#"
         >Read More</a>
       </div>
