--- a/views/index.hbs
+++ b/views/index.hbs
@@ -205,7 +205,7 @@
     {{! Card end }}
     {{! Card }}
     <div class="card mt-6 border-b-2 p-2 md:w-1/3 md:border-none">
-      <img class="card-img mb-2" src="/images/card2.jpg" alt="" />
+      <img class="card-img mb-2" src="/images/card2.jpg" alt="Wastage food" />
        <div class="card-body my-3">
      <h2 class="card-title uppercase font-bold font text-2xl my-3">title</h2>
         <p class="card-text mb-5 font-bold">Lorem ipsum dolor sit, amet
