--- a/views/index.hbs
+++ b/views/index.hbs
@@ -174,7 +174,7 @@
     <div class="py-6 md:w-5/12 md:h-5/12 lg:w-2/5 xl:w-1/4 flex justify-center">
       <img
         class="rounded w-3/4 md:w-max"
-        src="/images/titleimg.jpg"
+        src="/images/title_img1.jpg"
         alt="People cooking"
       />
     </div>
@@ -190,7 +190,7 @@
   <div class="card-container my-4 flex flex-col text-center sm:flex-col sm:items-center  md:flex-row sm:px-5">
     {{! Card }}
     <div class="card mt-6 border-b-2 p-2 md:w-1/3 md:border-none">
-      <img class="card-img mb-2" src="/images/card_1.jpg" alt="rotten apples" />
+      <img class="card-img mb-2" src="/images/card1.jpg" alt="rotten apples" />
       <div class="card-body my-3">
         <h2 class="card-title uppercase font-bold font text-2xl my-3">title</h2>
         <p class="card-text mb-5 font-bold">Lorem ipsum dolor sit, amet
