--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
 <nav class="navbar bg-header py-7 px-4 text-white gap-3">
+  <a href="https://youtube.com/shorts/SXHMnicI6Pg?feature=share">
   <img src="/images/logo.png" alt="logo" class="logo" />
+  </a>
   <div class="text-sm md:text-xl">
     <a href="#" class="open-button mr-3" id="signup">sign up</a>
     <a href="#" class="open-button mr-3 font-bold bg-yellow-400 px-2 py-1 rounded text-white hover:text-grey-400 hover:bg-yellow-600" id="login">login</a>
