--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar bg-header py-7 px-4 text-white gap-3">
-  <a href="https://youtube.com/shorts/SXHMnicI6Pg?feature=share">
-  <img src="/images/logo.png" alt="logo" class="logo w-1/2" />
+  <a class="logo-img-link" href="https://youtube.com/shorts/SXHMnicI6Pg?feature=share">
+  <img src="/images/logo.png" alt="logo" class="logo w-full" />
   </a>
   <div class="text-sm md:text-xl">
     <a href="#" class="open-button mr-3" id="signup">sign up</a>
