--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,10 @@
 <nav class="navbar bg-header py-5 px-4 text-white gap-3">
-  <img src="/images/logo.png" alt="logo" class="logo" />
+  <a
+    class="logo-img-link"
+    href="https://youtube.com/shorts/SXHMnicI6Pg?feature=share"
+  >
+    <img src="/images/logo.png" alt="logo" class="logo w-full" />
+  </a>
   <ul class="navbar-menu flex items-center text-sm md:text-lg">
     <li><a href="/adverts">adverts</a></li>
     <a href="#" class="open-button" id="addAdvert">Add Advert</a>
